# little_lamp

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  PHILOSOPHY.md  PROTOCOL.md  README.md  USER_STORY.md  partitions.csv  sdkconfig.defaults
devices/: innr-a19-ae287c2.md  thirdreality-3rsb22bz.md  xiao-esp32-c6.md
main/: CMakeLists.txt  bulb.c  bulb.h  button.c  button.h  commissioning.c  commissioning.h  console.c  console.h  enrollment.c  enrollment.h  idf_component.yml  log.c  log.h  main.c  rtc.c  rtc.h  schedule.c  schedule.h  state.c  state.h  zb.c  zb.h
tests/unit/: Makefile  test_schedule.c  test_state.c
tests/unit/stubs/: bulb_stub.c  bulb_stub.h  esp_log.h  log.h  rtc_stub.c
tests/unit/stubs/freertos/: FreeRTOS.h  queue.h
